Gave the data div a class fles

--- a/html/drama.html
+++ b/html/drama.html
@@ -24,6 +24,6 @@
             </ul>
         </nav>
     </div>
-    <div id="serialData"></div>
+    <div id="serialData" class="flex"></div>
 </body>
 </html>
