--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,11 @@
     <script type="module" src="/js/index.js"></script>
 </head>
 <body>
-    <div id="topNav">
+    <div id="topNav" class="flex">
         <a href="index.html"><img src="/logo.png"></a>
         <nav>
             <ul>
-                <a href="/html/drama.html">Drama's</a>
+                <a href="drama.html">Drama's</a>
                 <a href="actor.html">Actors/Actresses</a>
             </ul>
         </nav>
