--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <a href="drama.html">Drama's</a>
                 <a href="actor.html">Actors/Actresses</a>
+                <a href="fav.html">Favourites</a>
             </ul>
         </nav>
         <input type="text" placeholder="Search">
