--- a/html/index.html
+++ b/html/index.html
@@ -8,20 +8,26 @@
     <script type="module" src="/js/index.js"></script>
 </head>
 <body>
-    <div id="topNav" class="flex">
-        <a href="index.html"><img src="/logo.png"></a>
-        <nav>
+    <header>
+        <div id="topNav" class="flex">
+            <a href="index.html"><img src="/logo.png"></a>
+            <nav>
+                <ul>
+                    <a href="drama.html">Drama's</a>
+                    <a href="actor.html">Actors/Actresses</a>
+                    <a href="fav.html">Favourites</a>
+                </ul>
+            </nav>
+            <input type="text" placeholder="Search">
             <ul>
-                <a href="drama.html">Drama's</a>
-                <a href="actor.html">Actors/Actresses</a>
-                <a href="fav.html">Favourites</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </ul>
-        </nav>
-        <input type="text" placeholder="Search">
-        <ul>
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
-        </ul>
-    </div>
+        </div>
+    </header>
+    
+    <main>
+
+    </main>
 </body>
 </html>
