--- a/html/fav.html
+++ b/html/fav.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div id="topNav" class="flex">
+            <a href="index.html"><img src="/logo.png"></a>
+            <nav>
+                <ul>
+                    <a href="drama.html">Drama's</a>
+                    <a href="actor.html">Actors/Actresses</a>
+                    <a href="fav.html">Favourites</a>
+                </ul>
+            </nav>
+            <input type="text" placeholder="Search">
+            <ul>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
+            </ul>
+        </div>
+    </header>
+
+    <main></main>
 </body>
 </html>
