Added a list of all drama's released this year

--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,11 @@
             </ul>
         </div>
     </header>
-    
-    <main>
 
+    <main>
+        <div id="new">
+            <h1 class="title">New drama's this year</h1>
+        </div>
     </main>
 </body>
 </html>
