Created a div for the crew

--- a/html/details.html
+++ b/html/details.html
@@ -28,6 +28,7 @@
     <main>
         
         <div id="detailData"></div>
+        <div id="crew"></div>
         <div id="cast" class="flex"></div>
     </main>
 </body>
