--- a/html/actor.html
+++ b/html/actor.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/index.css">
     <script type="module" src="/js/drama.js"></script>
+    <script type="module" src="/js/index.js"></script>
 </head>
 <body>
     <header>
@@ -30,5 +31,11 @@
         <div id="actorData"></div>
         <div id="allDramas" class="flex"></div>
     </main>
+
+    <footer class="flex">
+        <p>WebII - Mike Derycke</p>
+        <p>Hira Tariq Akhtar - 2BaMCTB</p>
+        <p>2021-2022</p>
+    </footer>
 </body>
 </html>
