--- a/html/fav.html
+++ b/html/fav.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
+    <script type="module" src="/js/index.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -26,5 +27,11 @@
     </header>
 
     <main></main>
+
+    <footer class="flex">
+        <p>WebII - Mike Derycke</p>
+        <p>Hira Tariq Akhtar - 2BaMCTB</p>
+        <p>2021-2022</p>
+    </footer>
 </body>
 </html>
