--- a/html/index.html
+++ b/html/index.html
@@ -31,5 +31,11 @@
             <h1 class="title">New drama's this year</h1>
         </div>
     </main>
+
+    <footer class="flex">
+        <p>WebII - Mike Derycke</p>
+        <p>Hira Tariq Akhtar - 2BaMCTB</p>
+        <p>2021-2022</p>
+    </footer>
 </body>
 </html>
