--- a/html/drama.html
+++ b/html/drama.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/index.css">
     <script type="module" src="/js/drama.js"></script>
+    <script type="module" src="/js/index.js"></script>
 </head>
 <body>
     <header>
@@ -29,5 +30,11 @@
     <main>
         <div id="serialData" class="flex"></div>
     </main>
+    
+    <footer class="flex">
+        <p>WebII - Mike Derycke</p>
+        <p>Hira Tariq Akhtar - 2BaMCTB</p>
+        <p>2021-2022</p>
+    </footer>
 </body>
 </html>
