--- a/html/drama.html
+++ b/html/drama.html
@@ -19,7 +19,10 @@
                     <a href="fav.html">Favourites</a>
                 </ul>
             </nav>
-            <input type="text" placeholder="Search">
+            <form action="">
+                <input type="text" id="userSearch">
+                <input type="submit" value="Search" id="search">
+            </form>
             <ul>
                 <a href="login.html">Login</a>
                 <a href="register.html">Register</a>
@@ -28,9 +31,10 @@
     </header>
 
     <main>
+        <div id="content" class="flex"></div>
         <div id="serialData" class="flex"></div>
     </main>
-    
+
     <footer class="flex">
         <p>WebII - Mike Derycke</p>
         <p>Hira Tariq Akhtar - 2BaMCTB</p>
