--- a/html/fav.html
+++ b/html/fav.html
@@ -18,7 +18,10 @@
                     <a href="fav.html">Favourites</a>
                 </ul>
             </nav>
-            <input type="text" placeholder="Search">
+            <form action="">
+                <input type="text" id="userSearch">
+                <input type="submit" value="Search" id="search">
+            </form>
             <ul>
                 <a href="login.html">Login</a>
                 <a href="register.html">Register</a>
@@ -26,7 +29,9 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <div id="content" class="flex"></div>
+    </main>
 
     <footer class="flex">
         <p>WebII - Mike Derycke</p>
