--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,10 @@
                     <a href="fav.html">Favourites</a>
                 </ul>
             </nav>
-            <input type="text" placeholder="Search">
+            <form action="">
+                <input type="text" id="userSearch">
+                <input type="submit" value="Search" id="search">
+            </form>
             <ul>
                 <a href="login.html">Login</a>
                 <a href="register.html">Register</a>
@@ -27,6 +30,7 @@
     </header>
 
     <main>
+        <div id="content" class="flex"></div>
         <div id="new">
             <h1 class="title">New drama's this year</h1>
         </div>
