--- a/html/drama.html
+++ b/html/drama.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="/index.css">
     <script type="module" src="/js/drama.js"></script>
     <script type="module" src="/js/index.js"></script>
+    <title>Drama's</title>
 </head>
 <body>
     <header>
