--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="/js/login.js"></script>
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     
